--- a/index.html.in
+++ b/index.html.in
@@ -77,7 +77,7 @@ which have not yet been published.</b> <br>
 <td align="left" width="66%" class="c8">This web page is hosted by the
 <a href="http://www.linuxfoundation.org/">Linux Foundation</a></td>
 <td align="right" width="33%" class="c8">
-Site Last Modified: 06 Feb 2018</td>
+Site Last Modified: @MOD_DATE@</td>
 </tr>
 </table>
 
