--- a/toplevel/index.html.in
+++ b/toplevel/index.html.in
@@ -58,7 +58,8 @@ Names</a></li>
 <br>
 </li>
 
-<li><a href="docs/device-list/index.html">The Linux Device List</a></li>
+<li><a href="docs/device-list/index.html">The Linux Device
+List</a></li>
 
 <li class="c6"><br>
 </li>
@@ -71,15 +72,15 @@ For information, email <a href=
 <b>Please note that these pages contain the latest
 <em>published</em> assignments. There may be additional assignments
 which have not yet been published.</b> <br>
+
 <br>
 <table summary="credits" bgcolor="#606060" cols="2" width="100%" border="0">
 <tr>
 <td align="left" width="66%" class="c8">This web page is hosted by the
 <a href="http://www.linuxfoundation.org/">Linux Foundation</a></td>
 <td align="right" width="33%" class="c8">
-Site Last Modified: 06 Feb 2018</td>
+Site Last Modified: @MOD_DATE@</td>
 </tr>
-</table>
 
 </body>
 </html>
